--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@petejkim/react-scripts-ts-sass": "2.15.2",
+    "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.0",
+    "@types/lodash": "^4.14.112",
     "@types/node": "^10.5.2",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
