--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@petejkim/react-scripts-ts-sass": "2.15.2",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
@@ -15,6 +16,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/jest": "^23.3.0",
     "@types/lodash": "^4.14.112",
     "@types/node": "^10.5.2",
