added mortgage calculator

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@petejkim/react-scripts-ts-sass": "2.15.2",
     "classnames": "^2.2.6",
+    "financejs": "^4.1.0",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
